releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.16.2
====================
[2689144] PWS no longer goes into a loop if the main menu has not yet
been displayed when accessing the recent entries via the system tray icon.
[2664703] Load base locale DLL if can't find a specific sub-locale version
[2657132] View Reports no longer causes application crash.

Changes to Existing Features in 3.16.2
=======================================
[] When doing a Browse to URL, the password of the current entry is
copied to the clipboard. This is action is not performed if the Browse
is invoked during Edit.

New Features for 3.16.2
========================
[] New preference to word wrap the Notes field in Add & Edit. Also,
ability to override this and showing the notes by right-click context
menu.
[] Add new field 'Run Command' to allow commands etc. to be executed
via Ctrl+E or menu.  See help for details.
[] Support AutoType with 'Browse to URL' and new 'Run Command' functions.
See help for details.
[] Implement "Find Up" via clicking Find toolbar button with Shift key down or
pressing 'Shift+F3' for repeat find up.

Bugs fixed in 3.16.1
====================
[2599930] All fields, buttons, checknoxes that could change an entry's
data are disabled if the database is in read-pnly mode.
[] Lock on Windows Lock works again.
[] Ctrl+F sets focus to the find string edit box.
[] No longers asks for confirmation of Cancel during Edit in read only
mode as that is the only option available to the user.
[] Right-click context menu now correct when user hides toolbars.

Bugs fixed in 3.16
==================
[2529736] Validate now corrects all Password History errors
[2509817] Control characters no longer sent via Autotype.
[2481370] Can now create shortcut by right-mouse down dragging.
[2423397] Sorting direction database preference was not being saved in
the database.  See "Changes to Existing Features" below.